# mwc-qt-wallet

./: .gitmodules  CMakeLists.txt  gen_vs_sln.bat  icon.rc  main.cpp  mwc-qt-wallet.pro  plugins.cpp
cmake/: RustTriple.cmake
